--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -14,6 +14,106 @@
     justify-content: space-between;
     align-items: center;
     height: 100%;
+    padding: 1rem, 1.2rem;
+}
+
+.header .colors {
+    color: var(--primary);
+}
+
+.header .nav-menu {
+    display: flex;
+}
+
+.header .nav-menu li {
+    padding: 0.6rem 1rem 0;
+}
+
+.header .nav-menu a {
+    font-size: 1rem;
+    font-weight: 600;
+    color: white;
+}
+
+.header .nav-menu .btn-group {
+    margin-left: 1rem;
+}
+
+.header .nav-menu .btn {
+    padding: 10px 24px;
+}
+
+.header .hamburger {
+    display: none;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 1280px) {
+    .header .container {
+        padding-left: 1rem;
+    }
+
+    .header .hamburger {
+        display: flex;
+        padding-right: 1rem;
+    }
+
+    .header .nav-menu {
+        display: none !important;
+    }
+
+    .header .nav-menu.active {
+        display: flex !important;
+        position: absolute;
+        flex-direction: column;
+        justify-content: flex-start;
+        top: 90px;
+        width: 100%;
+        right: 0;
+        height: 100vh;
+        transition: 0.4s;
+        z-index: 2;
+        background: #121212;
+        border: 1px solid black;
+    }
+
+    .header .nav-menu.active li {
+        padding: 1rem;
+        width: 100%;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.32);
+    }
+
+    .header .nav-menu.active a {
+        font-size: 1.2rem;
+    }
+
+    .header .nav-menu.active .btn-group {
+        padding: 0;
+        margin: 1.2rem 3%;
+    }
+
+    .header .nav-menu.active .btn {
+        width: 100%;
+        margin: 0;
+    }
+}
+
+/* .header {
+    width: 100%;
+    height: 90px;
+    border-bottom: 1px solid #eee;
+    background: #121212;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 10;
+}
+
+.header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
     padding: 1rem;
 }
 
@@ -35,6 +135,25 @@
     color: white;
 }
 
+.nav-menu.active {
+    display: flex;
+}
+
+.nav-menu.active li {
+    padding: 0 1rem;
+    padding-top: 12px;
+}
+
+.nav-menu.active a {
+    font-size: 1rem;
+    font-weight: 600;
+    color: white;
+}
+
+.nav-menu.active .btn-active {
+    padding-left: 40px;
+}
+
 .hamburger {
     display: none;
     cursor: pointer;
@@ -46,21 +165,35 @@
     }
 
     .nav-menu {
+        display: none !important;
+    }
+
+    .nav-menu.active {
+        display: flex !important;
         position: absolute;
         flex-direction: column;
-        justify-content: start;
+        justify-content: flex-start;
         top: 90px;
-        right: -100%;
-        width: 50%;
+        width: 100%;
         height: 100vh;
         transition: 0.4s;
         z-index: 2;
         background: #121212;
-        border-left: 1px solid white;
+        border: 1px solid black;
     }
 
-    .nav-menu.active {
-        right: 0;
+    .nav-menu.active li {
+        padding: 1rem;
+        width: 100%;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.224);
+    }
+
+    .nav-menu.active li:hover {
+        border-bottom: 1px solid white;
+    }
+
+    .nav-menu.active a {
+        font-size: 1.2rem;
     }
 
     .nav-menu li {
@@ -72,4 +205,17 @@
     .nav-menu a {
         font-size: 1.2rem;
     }
-}
+
+    .btn-group {
+        display: none;
+    }
+
+    .btn-active {
+
+    }
+
+    .btn {
+        width: 100%;
+        margin: 1rem 0;
+    }
+} */
